Tue Aug 19 14:09:44 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/number_theory/prime.gel: update the known limits on mersenne
	  primes from GIMPS

Mon Aug 18 17:10:59 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: improve docs, mark when things were added,
	  document the new float:float:float behaviour, and document all
	  the new stuff added below

	* src/funclib.c, src/eval.[ch]: Add SetElement and SetVElement
	  functions to set specific elements in a global matrix/vector

	* src/geniustests.txt: test SetElement and SetVElement

Sun Aug 17 14:39:15 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, src/gnome-genius.[ch]: When errors are given during
	  graphing, instead of forcing them into a box, which is in
	  retrospect really annoying, just display a warning label below the
	  graph window telling the user to look at the console.  Also
	  if errors do go into a dialog, make sure that it is parented by the
	  graph window

Fri Aug 15 17:38:41 2014  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml: update the feedback info to be more within 
	  reality.  Don't use ghelp: urls as those won't work in the HTML
	  version.

	* src/eval.c: do the same thing for vector building notation as
	  in all for/sum/prod loops, where if going over floats, allow
	  errors withing the final number to within 2^-20 of the step size.

	* src/geniustests.txt: add tests for above

	* src/genius-readline-helper.c: avoid a race in display of errors,
	  by flushing and waiting 5 miliseconds after readline and before
	  sending the line onwards to the GUI

Thu Aug 14 00:54:57 2014  Jiri (George) Lebl <jirka@5z.com>

	* lib/equation_solving/diffyqs.gel: slight optimization for
	  RungeKutta and RungeKuttaFull

Wed Aug 13 18:41:27 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix using a single point in LinePlotDrawPoints if
	  using a matrix of points.  Also allow null matrix in